# graphics-engine

./: .engine.cc.swp  .gitignore  CMakeLists.txt  README.md  engine.cc
ini/: filelist  wireframe_debugging.ini
ini/intro/: filelist
ini/l-systems/: l_systems001.ini  l_systems002.ini  l_systems003.ini  l_systems004.ini  l_systems005.ini  l_systems006.ini  l_systems007.ini  l_systems008.ini  l_systems009.ini  l_systems010.ini  l_systems011.ini  l_systems012.ini  l_systems013.ini  l_systems014.ini  l_systems015.ini  l_systems016.ini  l_systems017.ini  l_systems018.ini  l_systems019.ini  l_systems020.ini  l_systems021.ini  l_systems022.ini  l_systems023.ini  l_systems024.ini  l_systems025.ini  l_systems026.ini
ini/wireframe/: wireframes010.ini  wireframes011.ini  wireframes012.ini  wireframes013.ini  wireframes014.ini  wireframes015.ini
ini/z-buffering/: filelist
ini/z-buffering_wireframe/: z_buffered_wireframes037.ini  z_buffered_wireframes038.ini  z_buffered_wireframes039.ini  z_buffered_wireframes040.ini  z_buffered_wireframes041.ini  z_buffered_wireframes042.ini
ini/z_buffering_triangles/: z_buffering001.ini
src/: README.md  engine.cc
src/include/: Figures3D.cc  Figures3D.h  Fractals3D.cc  Fractals3D.h  Intro.cc  Intro.h  LSystems2D.cc  LSystems2D.h  LSystems3D.cc  LSystems3D.h  Logic3D.cc  Logic3D.h  ZBufferTriangles.cc  ZBufferTriangles.h  ZBufferWireframes.cc  ZBufferWireframes.h
src/lib/: Color.cc  Color.h  Figure.cc  Figure.h  InfLight.cc  InfLight.h  Light.h  Line2D.cc  Line2D.h  Point2D.cc  PointLight.h
util/: Color.cc  Color.h  Face.h  Figure.cc  Figure.h  Line2D.cc  Line2D.h  Point2D.cc  Point2D.h  ZBuffer.cc  ZBuffer.h
util/Easy_image/: easy_image.cc  easy_image.h
util/Ini_config/: ini_configuration.cc
util/Parser/: l_parser.cc
util/Vector3D/: vector3d.cc  vector3d.h
util/diffScript/: script.sh
